# cotitan

./: .editorconfig  .gitignore  .travis.yml  Makefile  README.md
client/: .gitignore  Makefile  Makefile.am  Makefile.in  configure  configure.ac  package.json
client/include/: cotitan.h  fifo.h  net.h  packet.h  ui.h
client/js/: entry.js  network.js
client/public/: index.html
client/src/: .gitignore  fifo.c  main.c  net.c  ui.c
client/test/: .gitignore  Makefile  fifo-test.c
daemon/: .gitignore  Emakefile  Makefile  cot_client.erl  cot_packet.erl  cotitand.erl
include/: misc.h  net.h  netc.h  ui.h
project/: Build.scala  plugins.sbt
src/: client.c  daemon.c  net.c  netc.c  ui.c
src/main/resources/: package.json  webpack-dev.config.js
src/main/resources/js/: network.js
src/main/scala/com/cotitan/server/: Cotitan.scala  Router.scala  WebSocketClient.scala  WebSocketServer.scala
src/main/scala/com/cotitan/server/routing/: Packet.scala  Payload.scala  Router.scala
src/main/scala/com/cotitan/server/websocket/: WebSocketClient.scala  WebSocketServer.scala
test/: ui_test.c
